k8s/monitoring/grafana/grafana-deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    application: grafana
    component: monitoring
spec:
  template:
    metadata:
      labels:
        application: grafana
        component:  monitoring
      annotations:
        checksum/configuration: ${CONF_SHA}
        checksum/environment: ${ENV_SHA}
        prometheus.io/scrape: "true"
    spec:
      securityContext:
        fsGroup: 472
      containers:
      - image: grafana/grafana:${GRAFANA_VERSION}
        name: grafana
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
            #            #env:
            #          # #env:The following env variables set up basic auth twith the default admin user and admin password.
            #          - #env:name:  GF_SECURITY_ADMIN_PASSWORD
            #            #env:value: admin
            #          - #env:name:  PROMETHEUS_ENDPOINT
            #            #env:value: http://prometheus:9090
          #readinessProbe:
          #httpGet:
          #path: /login
          #port: 3000
          #initialDelaySeconds: 30
          #timeoutSeconds: 1
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: grafana-configuration
          mountPath: /etc/grafana/provisioning

      volumes:
      - name: grafana-configuration
        configMap:
          name: grafana-configuration
          items:
            - key: prometheus.yaml
              path: datasources/prometheus.yaml
