k8s/monitoring/grafana/grafana-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
  - name: web
    port: 3000
    protocol: TCP
  selector:
    application: grafana
